# late-predictor

./: .gitignore  Dockerfile  config.py  config.yaml  load_from_supabase.py  main.py  pyproject.toml  supabase_client.py  test.ipynb
.github/workflows/: etl_googlesheet.yml  feature_engineering.yml
api/: main.py  server.py
data/: feature_df.parquet
models/: feature_registry.json  top_models.pkl  trained_models.pkl
models/artifacts/: onehot_columns.pkl  trained_models.pkl
notebook/: etl.ipynb  fastapi_endpoint_test.ipynb  model_inference.ipynb  model_selection_loocv_ensemble.ipynb  supabase_endpoint_test.ipynb  test_endpoints.ipynb
pipelines/: data_feedback.py  extract.py  extract_and_preprocess.py  load_data.py  predict.py  preprocess.py  train.py
services/: feature_registry.py  ml_service.py
src/: config.py  models.py
src/etl_googlesheet/: main.py
src/etl_googlesheet/pipelines/: extract.py  load.py  transform.py
src/fastapi_app/: main.py
src/fastapi_app/models/artifacts/: top_models.pkl
src/fastapi_app/pipelines/: data_feedback.py  preprocess.py  train.py
src/fastapi_app/services/: feature_registry.py  ml_service.py
src/feature_engineering/: feature_registry.yaml  main.py
src/feature_engineering/pipelines/: extract.py  load.py  transform.py
src/utils/: cat_encoding.py  latlon_parser.py  logger.py  supabase_client.py  time_parser.py
utils/: cat_encoding.py  supbase_info.py
