[project]
name = "late-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "gspread>=6.2.1",
    "joblib>=1.5.3",
    "oauth2client>=4.1.3",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.46.0",
]
